--- a/brincadeira.html
+++ b/brincadeira.html
@@ -140,7 +140,7 @@
     <!-- Página 5 - Mensagem Final -->
     <div id="page5" class="page">
         <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=qJR_Wce00SU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/qJR_Wce00SU?autoplay=1&mute=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <h2>Obrigado por chegar até aqui! 💖😊</h2>
         <div id="finalMessage"></div>
@@ -151,10 +151,10 @@
         // Array de mensagens de erro para a página 3
         const errorMessages = [
             "Esse amigo ai não sou eu!",
-            "Esse amigo é meio gay!",
+            "Esse amigo é meio estranho!",
             "Esse nem é seu amigo!",
-            "Se errar mais uma vez vc é baitola!",
-            "Errou! Tenta de novo arrombado!"
+            "Se errar mais uma vez vou ficar triste!",
+            "Errou! Tenta de novo, cabeção!"
         ];
 
         // Mensagem final para digitar letra por letra
@@ -318,4 +318,5 @@
         document.head.appendChild(style);
     </script>
 </body>
+
 </html>
