--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <!-- Página 5 - Mensagem Final -->
     <div id="page5" class="page">
         <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/qJR_Wce00SU?autoplay=1&mute=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/qJR_Wce00SU?autoplay=" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <h2>Obrigado por chegar até aqui! 💖😊</h2>
         <div id="finalMessage"></div>
@@ -280,8 +280,8 @@
                 
                 // Define a área máxima de movimento (80% da tela)
                 const maxMovementArea = {
-                    width: window.innerWidth * 0.4,
-                    height: window.innerHeight * 0.4
+                    width: window.innerWidth * 0.6,
+                    height: window.innerHeight * 0.6
                 };
                 
                 // Centraliza a área de movimento
@@ -346,3 +346,4 @@
 </body>
 
 </html>
+
